--- a/staff/addStaff.css
+++ b/staff/addStaff.css
@@ -69,6 +69,49 @@ body {
   color: red;
 }
 
+.logout button{
+  position: relative;
+  overflow: hidden;
+}
+
+.logout button:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background: rgba(0, 0, 0, .5);
+  opacity: 0;
+  border-radius: 100%;
+  transform: scale(1, 1) translate(-50%);
+  transform-origin: 50% 50%;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(25, 25);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(40, 40);
+  }
+}
+
+.logout button:focus:not(:active)::after {
+  animation: ripple 1s ease-out;
+}
+
+.logout button:hover {
+  background-color: white;
+  color: #263238;
+}
+
 .container_body {
   margin-top: 25px;
   margin-bottom: 25px;
@@ -235,6 +278,44 @@ body {
   color: #263238;
 }
 
+.submit button{
+  position: relative;
+  overflow: hidden;
+}
+
+.submit button:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background: rgba(0, 0, 0, .5);
+  opacity: 0;
+  border-radius: 100%;
+  transform: scale(1, 1) translate(-50%);
+  transform-origin: 50% 50%;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(25, 25);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(40, 40);
+  }
+}
+
+.submit button:focus:not(:active)::after {
+  animation: ripple 1s ease-out;
+}
+
 .home_navigator {
   background-color: #3f51b5;
   width: 100%;
@@ -281,6 +362,44 @@ body {
   border: 0px solid #1976d2;
 }
 
+.update button{
+  position: relative;
+  overflow: hidden;
+}
+
+.update button:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background: rgba(0, 0, 0, .5);
+  opacity: 0;
+  border-radius: 100%;
+  transform: scale(1, 1) translate(-50%);
+  transform-origin: 50% 50%;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(25, 25);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(40, 40);
+  }
+}
+
+.update button:focus:not(:active)::after {
+  animation: ripple 1s ease-out;
+}
+
 .delete button {
   background-color: #dd2c00;
   color: white;
@@ -297,20 +416,42 @@ body {
   border: 0px solid #1976d2;
 }
 
-.delete button {
-  background-color: #dd2c00;
-  color: white;
-  font-weight: bold;
-  padding: 5px;
-  border-radius: 2px;
-  border: 0px solid #dd2c00;
-  box-shadow: 1px 1px 1px 1px darkgrey;
+.delete button{
+  position: relative;
+  overflow: hidden;
 }
 
-.delete button:hover {
-  background-color: white;
-  color: #dd2c00;
-  border: 0px solid #1976d2;
+.delete button:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background: rgba(0, 0, 0, .5);
+  opacity: 0;
+  border-radius: 100%;
+  transform: scale(1, 1) translate(-50%);
+  transform-origin: 50% 50%;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(25, 25);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(40, 40);
+  }
+}
+
+.delete button:focus:not(:active)::after {
+  animation: ripple 1s ease-out;
 }
 
 .update_button button {
@@ -328,6 +469,44 @@ body {
 .update_button button:hover {
   background-color: white;
   color: #1976d2;
+}
+
+.update_button button{
+  position: relative;
+  overflow: hidden;
+}
+
+.update_button button:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background: rgba(0, 0, 0, .5);
+  opacity: 0;
+  border-radius: 100%;
+  transform: scale(1, 1) translate(-50%);
+  transform-origin: 50% 50%;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(25, 25);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(40, 40);
+  }
+}
+
+.update_button button:focus:not(:active)::after {
+  animation: ripple 1s ease-out;
 }
 
 .delete_confirmation {
@@ -359,6 +538,44 @@ body {
   color: #dd2c00;
 }
 
+.delete_yes button{
+  position: relative;
+  overflow: hidden;
+}
+
+.delete_yes button:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background: rgba(0, 0, 0, .5);
+  opacity: 0;
+  border-radius: 100%;
+  transform: scale(1, 1) translate(-50%);
+  transform-origin: 50% 50%;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(25, 25);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(40, 40);
+  }
+}
+
+.delete_yes button:focus:not(:active)::after {
+  animation: ripple 1s ease-out;
+}
+
 .delete_no {
   display: flex;
   justify-content: center;
@@ -380,6 +597,44 @@ body {
 .delete_no button:hover {
   background-color: #dd2c00;
   color: white;
+}
+
+.delete_no button{
+  position: relative;
+  overflow: hidden;
+}
+
+.delete_no button:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background: rgba(0, 0, 0, .5);
+  opacity: 0;
+  border-radius: 100%;
+  transform: scale(1, 1) translate(-50%);
+  transform-origin: 50% 50%;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(25, 25);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(40, 40);
+  }
+}
+
+.delete_no button:focus:not(:active)::after {
+  animation: ripple 1s ease-out;
 }
 
 .delete_details {
