--- a/home/index.css
+++ b/home/index.css
@@ -69,6 +69,50 @@ body {
   color: red;
 }
 
+
+.logout button{
+  position: relative;
+  overflow: hidden;
+}
+
+.logout button:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background: rgba(0, 0, 0, .5);
+  opacity: 0;
+  border-radius: 100%;
+  transform: scale(1, 1) translate(-50%);
+  transform-origin: 50% 50%;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(25, 25);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(40, 40);
+  }
+}
+
+.logout button:focus:not(:active)::after {
+  animation: ripple 1s ease-out;
+}
+
+.logout button:hover {
+  background-color: white;
+  color: #263238;
+}
+
 .content {
   padding: 20px;
   margin: 0 auto;
@@ -86,7 +130,6 @@ body {
   border: 2px solid #0d47a1;
   height: 46px;
 }
-
 
 @keyframes stretch {
   0% {
