--- a/staff/addStaff.css
+++ b/staff/addStaff.css
@@ -224,7 +224,7 @@ body {
 }
 
 .styled-select {
-   background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+   background: url(down-1.jpg) no-repeat 96% 0;
    height: 29px;
    overflow: hidden;
    width: 240px;
@@ -240,7 +240,7 @@ body {
 }
 
 .styled-select.slate {
-   background: url(http://i62.tinypic.com/2e3ybe1.jpg) no-repeat right center;
+   background: url(down-1.jpg) no-repeat right center;
    height: 34px;
    width: 240px;
 }
